--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 Pods
 *xcuserdata
+
+
+# fastlane specific
+fastlane/report.xml
+
+# deliver temporary files
+fastlane/Preview.html
+
+# snapshot generated screenshots
+fastlane/screenshots
+
+# scan temporary files
+fastlane/test_output
