--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ cache: cocoapods
 osx_image: xcode8.1
 
 before_install:
+  - brew install swiftlint
   - pod install --repo-update
   - gem update fastlane --no-ri --no-rdoc --no-document
 
