Enable test coverage, integrate xcov

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ cache: cocoapods
 osx_image: xcode8.1
 
 before_install:
-  - brew install swiftlint
   - pod install --repo-update
+  - gem install xcov --no-ri --no-rdoc --no-document
   - gem update fastlane --no-ri --no-rdoc --no-document
 
 script: travis/script.sh
