--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ osx_image: xcode8.1
 before_install:
   - pod install --repo-update
 
-script: travis/script.sh
+script:
+  - fastlane test
+  - bundle exec danger
